clusters/production/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
  namespace: argocd
spec:
spec:
  ingressClassName: nginx
  rules:
    - host: cd.jumzidb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
